# jogo-tecprog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/stageBuilderInstructions/: stageBuilderInstructionsTutorial.txt
assets/stages/: stageBuilderInstructionsTutorial.txt
include/: Animation.h  Background.h  Ent.h  Entities.h  Entity.h  EntityList.h  EventManager.h  GraphicManager.h  Id.h  InputManager.h  LeaderBoardLoader.h  List.h  Platform.h  Player.h  PlayerControl.h  TEXTURE_PATHS.h  stdafx.h
include/Collisions/: CollisionChooser.h  EntityCollisionChooser.h  EntityCollisionDealer.h  EntityCollisionManager.h  EntityCollisions.h  ICollisionChooser.h  ObstacleCollisionChooser.h  ObstacleCollisionDealer.h  ObstacleCollisionManager.h  ObstacleCollisions.h  TileCollisionChooser.h  TileCollisionDealer.h  TileCollisionManager.h  TileCollisions.h
include/Concurrent/: BossThread.h  Thread.h
include/Coordinates/: FloatRectangle.h  IntRectangle.h  MathVector.h  VectorFloat.h  VectorUnsignedInt.h
include/Defines/: backgroundafx.h  enemyafx.h  objectsafx.h  playerafx.h  stdafx.h  texturepathafx.h  tileafx.h
include/Entities/: Background.h  Barrel.h  Box.h  Character.h  DogEnemy.h  Enemy.h  Ent.h  Entity.h  EntityList.h  Fire.h  (+11 more)
saves/: enemySave.txt  leaderBoardSave.txt  obstacleSave.txt  player1Save.txt  player2Save.txt  projectileSave.txt  stageSave.txt
src/: Animation.cpp  Ent.cpp  Entities.cpp  EntityList.cpp  EventManager.cpp  GraphicManager.cpp  InputManager.cpp  Platform.cpp  Player.cpp  PlayerControl.cpp  Wall.cpp
uml/: DiagramaJogo.uml
(+155 files in other folders)
